httpserver/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: httpserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
      role: backend
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - name: httpserver
        image: vincent616/httpserver:v1.0.2@sha256:5a21603635be8e5906e5ccfc44f34649ec4d2e762599692ddaa3fbbf1232c5fc
        imagePullPolicy: IfNotPresent
        ports:
          - name: httpserver-port
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: httpserver-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          terminationGracePeriodSeconds: 60
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: httpserver-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
          limits:
            cpu: 100m
            memory: 90Mi
      nodeSelector:
        kubernetes.io/os: linux
