httpserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: httpserver
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31544 
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver
    role: backend
  type: NodePort
